# gen_kobject_list

./: .gitignore  Cargo.toml  README.md  test.sh
src/: analyze.rs  consts.rs  main.rs  outputs.rs  types.rs
src/outputs/: gperf.rs
tests/: struct_tags.json
