[package]
name = "gen_kobject_list"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
fallible-iterator = "0.3.0"
gimli = { version = "0.31.1", features = ["fallible-iterator"] }
hifijson = "0.2.2"
object = "0.36.7"
phf = { version = "0.11.3", features = ["macros"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
